k8s/chaintrap-maptool/middleware-stripprefix-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: chaintrap-maptool-strip-ingressroute-prefix
spec:
  stripPrefix:
    prefixes:
      - /chaintrap-maptool/
